--- a/app/globals.css
+++ b/app/globals.css
@@ -9,14 +9,16 @@
   margin: 0;
 }
 
-html,
-body {
+html {
   max-width: 100vw;
-  overflow-hidden;
+  overflow: hidden;
   height: 100vh;
 }
 
 body {
+  max-width: 100vw;
+  overflow: hidden;
+  height: 100vh;
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
 } 
